synergy (1.8.7-stable+dfsg.1-2) UNRELEASED; urgency=medium

  * Correct missing tags in man page sgml source. Fix formatting and an extra
    argument.

 -- Joshua Honeycutt <joshua.honeycutt@gmail.com>  Sun, 12 Feb 2017 02:11:15 -0600

synergy (1.8.7-stable+dfsg.1-1) experimental; urgency=medium

  * New maintainer (Closes: #852081)
  * New upstream version. (Closes: #764390, #818490)
  * Update watchfile to check symless github.
  * Upstream tarball modified to remove non-DFSG files and unused external
    library tarballs.
  * Removed patches: cprotocolutil-writef, system-cryptopp, x11-mouseover. 
  * Added shell script to generate SSL key/certificate files for encryption
    (/usr/share/synergy/gen_ssl_pem.sh).
  * Updated man pages (removed old crypto++ references and command line
    options, added new command line options, formatting).
  * Added documentation to README.Debian on enabling crypto without the gui.
  * Added new_ssl patch to build against newer OpenSSL in Debian.
  * Added enable_pro patch to bypass activation for Pro features.
  * Added syntool binary and manual page.
  * lintian override for possible-gpl-code-linked-with-openssl due to
    upstream exception.
  * Added a debian specific version string to the GUI about dialog.

 -- Joshua Honeycutt <joshua.honeycutt@gmail.com>  Mon, 06 Feb 2017 09:25:39 -0600

synergy (1.4.16-1.2) unstable; urgency=medium

  * Non-maintainer upload.
  * Apply patch from https://xzrq.net/x11-mouseover.patch as mentioned
    in https://github.com/symless/synergy/issues/3749#issuecomment-58855820
    to fix X11 mouse-over issue on synergy server (closes: #764389).

 -- Peter Palfrader <weasel@debian.org>  Sun, 08 Jan 2017 11:20:13 +0100

synergy (1.4.16-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Added debian_google-test.patch to build against Debian's
    google-mock and libgtest-dev packages. Closes: #812303

 -- Joshua Honeycutt <joshua.honeycutt@gmail.com>  Sun, 23 Oct 2016 23:36:22 -0500
